<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCE4EC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/wrd" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/paddingLeft"
            android:paddingTop="@dimen/paddingTop"
            android:paddingRight="@dimen/paddingRight"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="@dimen/paddingEnd"
                android:src="@drawable/ic_baseline_business_center_24" />

            <TextView
                style="@style/titleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_name" />

            <TextView
                style="@style/valueTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selling_flower" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/paddingLeft"
            android:paddingRight="@dimen/paddingRight"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="@dimen/paddingEnd"
                android:src="@drawable/ic_baseline_email_24" />

            <TextView
                style="@style/titleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/e_mail_address" />

            <TextView
                style="@style/valueTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maryammuh1960_gmail_com" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/paddingLeft"
            android:paddingRight="@dimen/paddingRight"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="@dimen/paddingEnd"
                android:src="@drawable/ic_baseline_location_on_24" />

            <TextView
                style="@style/titleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_address" />

            <TextView
                style="@style/valueTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jordan_irbid" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/paddingLeft"
            android:paddingRight="@dimen/paddingRight"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="@dimen/paddingEnd"
                android:src="@drawable/ic_baseline_local_florist_24" />

            <TextView
                style="@style/titleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_description" />

            <TextView
                style="@style/valueTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selling_all_kind_of_flower" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/paddingLeft"
            android:paddingRight="@dimen/paddingRight"
            android:paddingBottom="@dimen/paddingBottom">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="@dimen/paddingEnd"
                android:src="@drawable/ic_baseline_work_24" />

            <TextView
                style="@style/titleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_hours" />

            <TextView
                style="@style/valueTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_7am_to_7bm" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>